manifests/modela-system/supervisor/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: control-plane-metrics
    app.kubernetes.io/part-of: modela
  name: control-plane-metrics
  namespace: modela-system
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: modela-control-plane
